test/files/neg/t4842b.scala
class TypeArg[X](val x: X)(a: AnyRef) {
  def this() = { this(???)(new { println(TypeArg.this.x) } ); println("next") } // error
}
